# static-gen-rs

./: Cargo.toml  readme.md
src/states/: mod.rs  statics.rs  template.rs
